# gbkfit-legacy

./: .directory  .gitignore  CMakeCache.txt  CMakeLists.txt  INSTALL.md  Makefile  README.md  USERGUIDE.md  cmake_install.cmake  cmake_uninstall.cmake
src/: CMakeLists.txt  Makefile  cmake_install.cmake  version.cpp
src/apps/: CMakeLists.txt  Makefile  cmake_install.cmake
src/apps/gbkfit_app_cli/: CMakeLists.txt  Makefile  cmake_install.cmake
src/apps/gbkfit_app_cli/include/: application.hpp  prerequisites.hpp
src/apps/gbkfit_app_cli/src/: application.cpp  main.cpp
src/gbc/: CMakeLists.txt
src/gbc/gbc/: CMakeLists.txt
src/gbkfit/: .directory  CMakeLists.txt  Makefile  cmake_install.cmake
src/gbkfit/gbkfit/: CMakeLists.txt  Makefile  cmake_install.cmake
src/gbkfit/gbkfit/src/: .directory  array_util.cpp  core.cpp  datamodel.cpp  dataset.cpp  dmodel.cpp  fits.cpp  fits_util.cpp  fitter.cpp  fitter_result.cpp  galmodel.cpp  gmodel.cpp  image_util.cpp  instrument.cpp  memory_buffer.cpp  memory_buffer_host.cpp  memory_buffer_malloc.cpp  model.cpp  model_parameters_fit_info.cpp  ndarray.cpp  ndarray_host.cpp  nddataset.cpp  ndshape.cpp  parameters.cpp  parameters_fit_info.cpp  params.cpp  spread_function.cpp  spread_functions.cpp  utility.cpp
src/gbkfit/gbkfit_cuda/: CMakeLists.txt  Makefile  cmake_install.cmake
src/gbkfit/gbkfit_cuda/src/: convolver_cuda.cpp  memory_buffer_cuda.cpp  ndarray.cpp  ndarray_cuda.cpp
src/gbkfit/gbkfit_dmodel/: CMakeLists.txt
src/gbkfit/gbkfit_dmodel/src/: scube.cpp  scube_factory.cpp
src/gbkfit/gbkfit_dmodel_cuda/: CMakeLists.txt
src/gbkfit/gbkfit_dmodel_cuda/src/: mmaps_cuda.cpp  mmaps_cuda_factory.cpp  scube_cuda.cpp  scube_cuda_factory.cpp  scube_cuda_kernels_h.cu
src/gbkfit/gbkfit_dmodel_mmaps/: CMakeLists.txt  Makefile  cmake_install.cmake
src/gbkfit/gbkfit_dmodel_mmaps/src/: mmaps.cpp  mmaps_factory.cpp
src/gbkfit/gbkfit_dmodel_mmaps_cuda/: CMakeLists.txt  Makefile  cmake_install.cmake
src/gbkfit/gbkfit_dmodel_mmaps_cuda/src/: mmaps_cuda.cpp  mmaps_cuda_factory.cpp  mmaps_cuda_kernels_h.cu
src/gbkfit/gbkfit_dmodel_mmaps_omp/: CMakeLists.txt  Makefile  cmake_install.cmake
src/gbkfit/gbkfit_dmodel_mmaps_omp/src/: mmaps_omp.cpp  mmaps_omp_factory.cpp  mmaps_omp_kernels.cpp
src/gbkfit/gbkfit_dmodel_omp/: CMakeLists.txt
src/gbkfit/gbkfit_dmodel_omp/src/: mmaps_omp.cpp  mmaps_omp_factory.cpp  mmaps_omp_kernels.cpp  scube_omp.cpp  scube_omp_factory.cpp
src/gbkfit/gbkfit_dmodel_scube/: CMakeLists.txt  Makefile  cmake_install.cmake
src/gbkfit/gbkfit_dmodel_scube_cuda/: CMakeLists.txt  Makefile  cmake_install.cmake
src/gbkfit/gbkfit_dmodel_scube_cuda/src/: scube_cuda.cpp  scube_cuda_factory.cpp
src/gbkfit/gbkfit_dmodel_scube_omp/: CMakeLists.txt  Makefile  cmake_install.cmake
src/gbkfit/gbkfit_dmodel_scube_omp/src/: scube_omp.cpp  scube_omp_factory.cpp  scube_omp_kernels.cpp
src/gbkfit/gbkfit_fftw3/: CMakeLists.txt  Makefile  cmake_install.cmake
src/gbkfit/gbkfit_fftw3/include/: .directory
src/gbkfit/gbkfit_fftw3/src/: memory_buffer_fftw3.cpp  ndarray.cpp  ndarray_host_fftw3.cpp  util.cpp
src/gbkfit/gbkfit_fitter_mpfit/: CMakeLists.txt  Makefile  cmake_install.cmake
src/gbkfit/gbkfit_fitter_mpfit/src/: fitter_factory_mpfit.cpp  fitter_mpfit.cpp  fitter_mpfit_factory.cpp
src/gbkfit/gbkfit_fitter_multinest/: CMakeLists.txt  Makefile  cmake_install.cmake
src/gbkfit/gbkfit_fitter_multinest/src/: fitter_factory_multinest.cpp  fitter_multinest.cpp  fitter_multinest_factory.cpp
src/gbkfit/gbkfit_fitters_mpfit/: CMakeLists.txt
src/gbkfit/gbkfit_fitters_mpfit/src/: fitter_mpfit.cpp
src/gbkfit/gbkfit_fitters_multinest/: CMakeLists.txt
src/gbkfit/gbkfit_fitters_multinest/src/: fitter_multinest.cpp
src/gbkfit/gbkfit_gmodel/: CMakeLists.txt
src/gbkfit/gbkfit_gmodel_cuda/: CMakeLists.txt
src/gbkfit/gbkfit_gmodel_cuda/src/: gmodel1_cuda.cpp  gmodel1_cuda_kernels_h.cu
src/gbkfit/gbkfit_gmodel_gmodel01/: CMakeLists.txt
src/gbkfit/gbkfit_gmodel_gmodel01/src/: gmodel01.cpp  gmodel01_factory.cpp
src/gbkfit/gbkfit_gmodel_gmodel01_cuda/: CMakeLists.txt
src/gbkfit/gbkfit_gmodel_gmodel01_cuda/src/: gmodel01_cuda.cpp  gmodel01_cuda_factory.cpp  gmodel01_cuda_kernels_h.cu
src/gbkfit/gbkfit_gmodel_gmodel01_omp/: CMakeLists.txt
src/gbkfit/gbkfit_gmodel_gmodel01_omp/src/: gmodel01_omp.cpp  gmodel01_omp_factory.cpp  gmodel01_omp_kernels.cpp
src/gbkfit/gbkfit_gmodel_gmodel1/: CMakeLists.txt  Makefile  cmake_install.cmake
src/gbkfit/gbkfit_gmodel_gmodel1/src/: gmodel1.cpp  gmodel1_factory.cpp
src/gbkfit/gbkfit_gmodel_gmodel1_cuda/: CMakeLists.txt  Makefile  cmake_install.cmake
src/gbkfit/gbkfit_gmodel_gmodel1_cuda/src/: gmodel1_cuda_factory.cpp
src/gbkfit/gbkfit_gmodel_gmodel1_omp/: CMakeLists.txt  Makefile  cmake_install.cmake
src/gbkfit/gbkfit_gmodel_gmodel1_omp/src/: gmodel1_omp_factory.cpp
src/gbkfit/gbkfit_gmodel_omp/: CMakeLists.txt
src/gbkfit/gbkfit_gmodel_omp/src/: gmodel1_omp.cpp  gmodel1_omp_kernels.cpp
src/gbkfit/gbkfit_model_model01/: CMakeLists.txt
src/gbkfit/gbkfit_model_model01/src/: model_model01.cpp
src/gbkfit/gbkfit_model_model01_cuda/: CMakeLists.txt
src/gbkfit/gbkfit_model_model01_cuda/src/: kernels_cuda_host.cu  model_model01_cuda.cpp
src/gbkfit/gbkfit_model_model01_omp/: CMakeLists.txt
src/gbkfit/gbkfit_model_model01_omp/src/: kernels_omp.cpp  model_model01_omp.cpp
src/gbkfit/gbkfit_model_thindisk/: CMakeLists.txt
src/gbkfit/gbkfit_model_thindisk/src/: model_thindisk.cpp  model_thindisk_arctan.cpp  model_thindisk_epinat.cpp  model_thindisk_kernels_omp.cpp
src/gbkfit/gbkfit_models_galaxy_2d/: CMakeLists.txt
src/gbkfit/gbkfit_models_galaxy_2d_cuda/: CMakeLists.txt
src/gbkfit/gbkfit_models_galaxy_2d_omp/: CMakeLists.txt
src/gbkfit/gbkfit_models_model01/: CMakeLists.txt
src/gbkfit/gbkfit_models_model01_cuda/: CMakeLists.txt
src/gbkfit/gbkfit_models_model01_omp/: CMakeLists.txt
src/gbkfit/gbkfit_ocl/: CMakeLists.txt
src/tests/: CMakeLists.txt  Makefile  cmake_install.cmake
src/tests/gbkfit/: CMakeLists.txt  gbkfit_fits.cpp
(+293 files in other folders)
