
# ==============================================================================
#
#   CMake configuration file
#
# ==============================================================================

#
# gbc libraries
#

add_subdirectory(gbc)

#
# gbkfit libraries
#

add_subdirectory(gbkfit)

#
# applications
#

add_subdirectory(apps)
