
# ==============================================================================
#
#   CMake configuration file
#
# ==============================================================================

#
# gbkfit libraries
#

add_subdirectory(gbkfit)

#
# applications
#

add_subdirectory(apps)

#
# tests
#

add_subdirectory(tests)
